complete option section

--- a/public/index.html
+++ b/public/index.html
@@ -56,16 +56,56 @@
         </a>
     </header>
 
+    <!-- upload section -->
     <section class="mt-10 px-2">
-        <h1 class="text-center text-4xl font-bold">کانورتر فایل</h1>
+        <h1 class="text-center text-3xl sm:text-4xl font-bold">کانورتر فایل</h1>
         <!-- upload window -->
-        <form action="" class="flex flex-col justify-center items-center gap-6 bg-surface-500 dark:bg-darksurface-500 max-w-150 mx-auto rounded-lg py-16 mt-6">
+        <form action="" class="flex flex-col justify-center items-center gap-6 bg-surface-400 dark:bg-darksurface-500 max-w-150 mx-auto rounded-lg py-16 mt-6">
             <svg class="w-12 md:w-16 h-12 md:h-16"><use href="#file-icon"></use></svg>
-            <label for="file-upload-input" class="bg-primary px-6 py-3 rounded text-center cursor-pointer font-bold text-lg">فایل خود را انتخاب کنید</label>
+            <label for="file-upload-input" class="bg-primary text-white px-6 py-3 rounded text-center cursor-pointer font-bold text-lg">فایل خود را انتخاب کنید</label>
             <input type="file" hidden id="file-upload-input" multiple>
         </form>
     </section>
-
+    
+    <!-- options section -->
+    <section class="mt-10 bg-background dark:bg-darkBackground custom-shadow">
+        <div class="container py-8 space-y-6">
+            <h2 class="text-xl sm:text-2xl text-center font-bold">به سادگی فایل های خود را کانورت کنید</h2>
+            <div class="flex flex-col-reverse md:flex-row justify-between items-center gap-2">
+                <div class="flex flex-col gap-0.5">
+                    <div class="flex gap-2 items-center">
+                        <img src="images/1-action-icon.svg" alt="" class="dark:hidden">
+                        <img src="images/1-dark-action-icon.svg" alt="" class="hidden dark:block">
+                        <span>فایل خود را آپلود یا با روش کشیدن و رها کردن در کادر بارگزاری کنید</span>
+                    </div>
+                    <!-- indent -->
+                    <div class="flex flex-col gap-1 ms-3">
+                        <span class="w-1 h-4 bg-textColor/80 dark:bg-darkTextColor rounded-full"></span>
+                        <span class="w-1 h-4 bg-textColor/80 dark:bg-darkTextColor rounded-full"></span>
+                        <span class="w-1 h-4 bg-textColor/80 dark:bg-darkTextColor rounded-full"></span>
+                    </div>
+                    <div class="flex gap-2 items-center">
+                        <img src="images/3-action-icon.svg" alt="" class="dark:hidden">
+                        <img src="images/3-dark-action-icon.svg" alt="" class="hidden dark:block">
+                        <span>منظر بمانید تا فایل آماده شود</span>
+                    </div>
+                    <!-- indent -->
+                    <div class="flex flex-col gap-1 ms-3">
+                        <span class="w-1 h-4 bg-textColor/80 dark:bg-darkTextColor rounded-full"></span>
+                        <span class="w-1 h-4 bg-textColor/80 dark:bg-darkTextColor rounded-full"></span>
+                        <span class="w-1 h-4 bg-textColor/80 dark:bg-darkTextColor rounded-full"></span>
+                    </div>
+                    <div class="flex gap-2 items-center">
+                        <img src="images/4-action-icon.svg" alt="" class="dark:hidden">
+                        <img src="images/4-dark-action-icon.svg" alt="" class="hidden dark:block">
+                        <span>فایل خود را بارگیری کنید</span>
+                    </div>
+                </div>
+                <img src="images/detail-section-pic.png" alt="" class="max-w-52 md:max-w-100">
+            </div>
+        </div>
+    </section>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <script src="js/app.js"></script>
 </body>
 </html>
