--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
         <!-- upload window -->
         <form action="" class="flex flex-col justify-center items-center gap-6 bg-surface-400 dark:bg-darksurface-500 max-w-150 mx-auto rounded-lg py-16 mt-6">
             <svg class="w-12 md:w-16 h-12 md:h-16"><use href="#file-icon"></use></svg>
-            <label for="file-upload-input" class="bg-primary text-white px-6 py-3 rounded text-center cursor-pointer font-bold text-lg">فایل خود را انتخاب کنید</label>
+            <label for="file-upload-input" class="bg-primary text-darkTextColor px-6 py-3 rounded text-center cursor-pointer font-bold text-lg">فایل خود را انتخاب کنید</label>
             <input type="file" hidden id="file-upload-input" multiple>
         </form>
     </section>
@@ -103,6 +103,21 @@
                 </div>
                 <img src="images/detail-section-pic.png" alt="" class="max-w-52 md:max-w-100">
             </div>
+        </div>
+    </section>
+
+    <!--  -->
+    <section class="container mt-16">
+        <div class="md:h-4/5 relative flex flex-col md:flex-row justify-between items-center rounded-lg gap-2 sm:gap-0 bg-gradient-to-l from-[#234C90] rtl:from-primary to-primary rtl:to-[#234C90] py-12 px-10">
+            <div class="text-darkTextColor space-y-5 max-w-100 relative z-10 text-center md:text-start">
+                <h3 class="text-xl md:text-3xl font-bold">همین حالا شروع کنید!</h3>
+                <p class="text-lg">سرعت <span class="font-bold">تبدیل</span> فایل های خود را به صورت <span class="font-bold">رایگان</span> تجربه کنید.</p>
+            </div>
+            <a href="" class="py-5 px-4.5 bg-darkTextColor text-textColor font-bold rounded text-base relative z-10">شروع تبدیل</a>
+            <!-- absolute circle -->
+            <div class="absolute start-2 sm:start-16 top-4 z-0 bg-[#61a6fa99] w-26 h-26 rounded-full"></div>
+            <div class="absolute sm:start-0 end-16 sm:end-0 mx-auto bottom-6 z-0 bg-[#61a6fa99] w-12 h-12 rounded-full"></div>
+            <div class="absolute end-6 sm:end-1/4 top-6 sm:top-10 z-0 bg-[#61a6fa99] w-12 h-12 rounded-full"></div>
         </div>
     </section>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
