complete total download section

--- a/public/index.html
+++ b/public/index.html
@@ -222,6 +222,37 @@
         </div>
     </section>
 
+    <!-- total downloads section -->
+    <section class="container bg-surface-400 dark:bg-darksurface-500 rounded-4xl py-6 px-3 flex flex-col items-center justify-center gap-3 mt-16">
+        <h2 class="text-lg md:text-2xl sm:max-w-8/10 text-center font-bold">حدود 500,000 کاربر برای تبدیل فایل های خود سایت ما را انتخاب کرده اند</h2>
+        <div class="flex flex-wrap gap-6 justify-center sm:justify-between items-center md:w-1/2">
+            <div class="flex gap-2 items-center">
+                <img src="images/archive-down-minimlistic.svg" alt="" class="hidden dark:block">
+                <img src="images/archive-down-minimlistic(light).svg" alt="" class="block dark:hidden">
+                <div class="flex flex-col gap-0.5 items-center">
+                    <span class="font-ltr font-bold text-lg">100k</span>
+                    <span class="text-thinTextColor dark:text-darkThinTextColor">بارگیری</span>
+                </div>
+            </div>
+            <div class="flex gap-2 items-center">
+                <img src="images/document-add.svg" alt="" class="hidden dark:block">
+                <img src="images/document-add(light).svg" alt="" class="block dark:hidden">
+                <div class="flex flex-col gap-0.5 items-center">
+                    <span class="font-ltr font-bold text-lg">240k</span>
+                    <span class="text-thinTextColor dark:text-darkThinTextColor">تبدیل</span>
+                </div>
+            </div>
+            <div class="flex gap-2 items-center">
+                <img src="images/archive-up-minimlistic.svg" alt="" class="hidden dark:block">
+                <img src="images/archive-up-minimlistic(light).svg" alt="" class="block dark:hidden">
+                <div class="flex flex-col gap-0.5 items-center">
+                    <span class="font-ltr font-bold text-lg">320k</span>
+                    <span class="text-thinTextColor dark:text-darkThinTextColor">بارگزاری</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- start now section -->
     <section class="container mt-16">
         <div class="md:h-4/5 relative flex flex-col md:flex-row justify-between items-center rounded-lg gap-2 sm:gap-0 bg-gradient-to-l from-[#234C90] rtl:from-primary to-primary rtl:to-[#234C90] py-12 px-10">
