fix some bug on result

--- a/public/index.html
+++ b/public/index.html
@@ -77,13 +77,13 @@
     <!-- result section -->
     <section class="container px-4 mt-10">
         <form class="">
-            <label for="file-upload-input" class="flex gap-1.5 bg-surface-300 dark:bg-darksurface-400 w-max text-primary text-lg py-2 px-2.5 rtl:rounded-tr-md ltr:rounded-tl-md rtl:rounded-tl-4xl ltr:rounded-tr-4xl cursor-pointer">
+            <label for="file-upload-input" class="flex gap-1.5 bg-surface-400 dark:bg-darksurface-400 w-max text-primary text-lg py-2 px-2.5 rtl:rounded-tr-md ltr:rounded-tl-md rtl:rounded-tl-4xl ltr:rounded-tr-4xl cursor-pointer">
                 <svg class="w-6 h-6"><use href="#file-plus-icon"></use></svg>
                 <span>اضافه کردن فایل</span>
             </label>
             <!-- records -->
             <div> <!-- this div is for curving the first item from results -->
-                <div class="flex justify-between w-full gap-0.5 items-center sm:text-xl bg-surface-400 dark:bg-darksurface-500 p-3 rtl:first:rounded-tl-md ltr:first:rounded-tr-md">
+                <div class="flex justify-between w-full gap-0.5 items-center sm:text-xl bg-surface-300 dark:bg-darksurface-500 p-3 rtl:first:rounded-tl-md ltr:first:rounded-tr-md">
                     <div class="flex items-center gap-2 sm:gap-6 md:gap-12 lg:gap-20">
                         <!-- title -->
                         <span class="break-words">my image.jpg</span>
@@ -102,7 +102,7 @@
                     <!-- size -->
                     <span class="text-nowrap">165 kb</span>
                 </div>
-                <div class="flex justify-between gap-0.5 w-full items-center sm:text-xl bg-surface-400 dark:bg-darksurface-500 p-3 rtl:first:rounded-tl-md ltr:first:rounded-tr-md">
+                <div class="flex justify-between gap-0.5 w-full items-center sm:text-xl bg-surface-300 dark:bg-darksurface-500 p-3 rtl:first:rounded-tl-md ltr:first:rounded-tr-md">
                     <div class="flex items-center gap-2 sm:gap-6 md:gap-12 lg:gap-20">
                         <!-- title -->
                         <span class="break-words">duble image.jpg</span>
@@ -122,9 +122,9 @@
                     <span class="text-nowrap">200 kb</span>
                 </div>
             </div>
-            <div class="flex justify-between items-center bg-surface-300 dark:bg-darksurface-400 p-3 rounded-b-md">
+            <div class="flex justify-between items-center bg-surface-400 dark:bg-darksurface-400 p-3 rounded-b-md">
                 <div class=""><span>2</span> فایل اضافه شده</div>
-                <button type="submit" class="bg-textColor dark:bg-darkTextColor text-darkTextColor dark:text-textColor flex items-center gap-1 px-2 py-1 font-bold rounded">
+                <button type="submit" class="bg-textColor dark:bg-darkTextColor text-darkTextColor dark:text-textColor flex items-center gap-1 px-2 py-1 font-bold rounded cursor-pointer">
                     <span>تبدیل</span>
                     <svg class="w-7 h-7 hidden rtl:block"><use href="#arrow-left-icon"></use></svg>
                     <svg class="w-7 h-7 hidden ltr:block"><use href="#arrow-right-icon"></use></svg>
